# finances-backend

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  env.example  makefile  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: develop.yml
finances/: asgi.py  settings.py  urls.py  wsgi.py
finances/accounts/: admin.py  apps.py  models.py  serializers.py
finances/accounts/migrations/: 0001_initial.py
finances/settings/: base.py  develop.py  local.py  test.py
finances/tests/: conftest.py  factories.py
finances/tests/fixtures/transactions/: transaction.json
finances/tests/fixtures/users/: user.json
finances/tests/unit/wallets/: tests_models.py  tests_validations.py
finances/wallet/: apps.py
finances/wallets/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  validations.py  views.py
finances/wallets/migrations/: 0001_initial.py
tests/fixtures/transactions/: transaction.json
tests/fixtures/users/: user.json
